--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,26 +1,14 @@
 en:
   logo:
-    title: "sylvain durand"
+    title: "Blog"
     url:   "/"
-  journal:
-    title: "journal"
-    url:   "/index.html"
-  projects:
-    title: "projects"
-    url:   "/projects/"
   about:
     title: "about"
     url:   "/about/"
-fr:
+es:
   logo:
-    title: "sylvain durand"
+    title: "Blog"
     url:   "/journal/"
-  journal:
-    title: "journal"
-    url:   "/journal/"
-  projets:
-    title: "projets"
-    url:   "/projets/"
   about:
-    title: "à propos"
-    url:   "/a-propos/"
+    title: "Acerca de"
+    url:   "/acerca/"
