--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: ""
 url: "http://http://jgpelaez.github.io/"
 twitter_username: jcgpelaez
 github_username:  jgpelaez
-linkedin_username:  jgpelaez
+linkedin_username:  juancarlosgpelaez
 
 permalink: /:title/
 
