--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Juan Carlos G. Pelaez Blog
+title: Juan Carlos G. Peláez Blog
 header-img: img/home-bg.jpg
 email: juancarlosgpelaez@gmail.com
 description: "Write your site description here. It will be used as your sites meta description as well!"
