update disquss config

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "http://jgpelaez.github.io/"
 twitter_username: jcgpelaez
 github_username:  jgpelaez
 linkedin_username:  juancarlosgpelaez
+disqus_shortname: jgpelaezgithubio
 
 permalink: /:title/
 
